--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "angular-material": "^1.0.7",
-    "angular": "^1.5.3"
+    "angular": "^1.5.3",
+    "moment": "^2.12.0"
   }
 }
