--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.13.4",
+    "twitter": "^1.2.5"
+  },
   "devDependencies": {
     "http-server": "^0.9.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node node_modules/http-server/bin/http-server"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
